fix callout icon alignment

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -177,6 +177,10 @@ h4 {
     color: var(--op-neutral-300) !important;
 }
 
+/* Callouts */
+.nextra-callout svg {
+    margin-top: 2px;
+}
 
 /* Customize code styles to match Optimism */
 code,kbd,samp,pre {
